@@ -2,6 +2,18 @@
 # arch-tag: automatic-ChangeLog--jgoerzen@complete.org--projects/missinglib--head--0.0
 #
 
+2004-08-31 21:42:24 GMT	John Goerzen <jgoerzen@complete.org>	patch-67
+
+    Summary:
+      Fixed BNFsupport docs
+    Revision:
+      missinglib--head--0.0--patch-67
+
+
+    modified files:
+     ChangeLog Makefile libsrc/bnf/bNFsupport.mli
+
+
 2004-08-31 21:37:23 GMT	John Goerzen <jgoerzen@complete.org>	patch-66
 
     Summary:
